# stm32-collection

./: .gitmodules  CMakeLists.txt  Makefile  README.md  stm32-collection-config.cmake
example/: CMakeLists.txt  Makefile
example/config/: FreeRTOSConfig.h
example/include/: usb.h
example/src/: main.cpp  usb.cpp
mcus/: stm32f103c8t6.cmake
scripts/: fix_linker.py  freertos_arch.py
template/: stm32-collection.cmake  toolchain.cmake
toolchain/: stm32f103x8.cmake
